Make class/ID names and CSS stylesheets hierarchical

--- a/web/linuxperf/settings.html
+++ b/web/linuxperf/settings.html
@@ -1,9 +1,9 @@
 <div class="margin_bottom setting_item">
-  <label for="off_cpu_scale" id="off_cpu_scale_desc" class="setting_label_left">
+  <label for="off_cpu_scale" id="linuxperf_off_cpu_scale_desc" class="setting_label_left">
     Off-CPU timeline display scale:
   </label>
   <input name="off_cpu_scale"
-         id="off_cpu_scale"
+         id="linuxperf_off_cpu_scale"
          type="range"
          min="0" max="1"
          step=".01"
@@ -15,7 +15,7 @@
   </label>
   <input type="number" name="threshold_input"
          value="2.50" min="0" max="100"
-         step=".1" id="threshold_input"
+         step=".1" id="linuxperf_threshold_input"
          onkeyup="checkValidPercentage(event)"
          onfocusout="insertValidPercentage(this)" />
 </div>
@@ -25,17 +25,17 @@
   </label>
   <input type="number" value="50", step="1" min="0"
          name="runtime_diff_threshold_input"
-         id="runtime_diff_threshold_input"
+         id="linuxperf_runtime_diff_threshold_input"
          onkeyup="checkValidPercentage(event)"
          onfocusout="insertValidPercentage(this)" />
 </div>
 <div class="margin_bottom setting_item">
-  <input type="checkbox" id="always_ms"
+  <input type="checkbox" id="linuxperf_always_ms"
          name="always_ms" onchange="">
   <label for="always_ms" class="setting_label_right">Always display runtimes in milliseconds</label>
 </div>
 <div class="setting_item">
-  <input type="checkbox" id="show_carm"
+  <input type="checkbox" id="linuxperf_show_carm"
          name="show_carm" onchange="">
   <label for="show_carm" class="setting_label_right">Display roofline-related flame graphs (with the title starting with CARM_)</label>
 </div>
