Update licensing information

--- a/web/linuxperf/settings.html
+++ b/web/linuxperf/settings.html
@@ -1,3 +1,8 @@
+<!--
+SPDX-FileCopyrightText: 2025 CERN
+SPDX-License-Identifier: GPL-3.0-or-later
+-->
+
 <div class="margin_bottom setting_item">
   <label for="off_cpu_scale" id="linuxperf_off_cpu_scale_desc" class="setting_label_left">
     Off-CPU timeline display scale:
